tests/valid_inputs/func_forward_declar.cpp



void foo(int a);

void foo(int b) {
	return;
}

void foo(int c);

int main() {

}
