tests/invalid_inputs/sema/def_arg_gap.cpp

void foo(int a = 5, int b);
